--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -31,5 +31,6 @@ RUN pip install --no-cache-dir --upgrade pip \
 
 EXPOSE 8000
 
-# Direct startup - Railway uses $PORT env variable
-CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
+# Default port 8000, Railway will override via PORT env
+ENV PORT=8000
+CMD sh -c "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
