--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-google-maps/api": "^2.20.8",
     "@tanstack/react-query": "^5.90.6",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.13.2",
@@ -31,8 +32,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/qrcode": "^1.5.5",
     "@types/node": "^24.6.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
