--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "httpx>=0.27.0",
   "tenacity>=8.2.3",
   "uvloop>=0.19.0",
+  "dnspython>=2.6.0",
   "openai>=1.0.0",
   "weasyprint>=61.0",
   "python-docx>=1.1.0"
