--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ pydantic>=2.0.0
 pydantic-settings>=2.0.0
 tenacity>=8.2.0
 httpx>=0.27.0
+dnspython>=2.6.0
 passlib[bcrypt]>=1.7.4
 PyJWT>=2.8.0
 requests>=2.31.0
