chore(railway): run alembic migrations on startup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,4 +33,5 @@ EXPOSE 8000
 
 # Default port 8000, Railway will override via PORT env
 ENV PORT=8000
-CMD sh -c "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+# Run migrations on startup (idempotent) before serving
+CMD sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
