fix(auth): force same-origin API in prod

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,6 +2,18 @@
   "rewrites": [
     {
       "source": "/auth/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/auth/:path*"
+    },
+    {
+      "source": "/api/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/api/:path*"
+    },
+    {
+      "source": "/docs/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/docs/:path*"
+    },
+    {
+      "source": "/auth/:path*",
       "has": [
         {
           "type": "host",
