fix(auth): same-origin api + vercel proxy

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,7 +5,11 @@
       "destination": "https://kyradi-saas-canli-production.up.railway.app/auth/:path*"
     },
     {
-      "source": "/:path*",
+      "source": "/admin/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/admin/:path*"
+    },
+    {
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
