--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,14 @@
 {
   "rewrites": [
     {
+      "source": "/auth/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/auth/:path*"
+    },
+    {
+      "source": "/admin/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/admin/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
