fix(vercel): add /revenue and /pricing rewrites

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -36,9 +36,15 @@
     { "source": "/pricing-rules", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules" },
     { "source": "/pricing-rules/", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules" },
     { "source": "/pricing-rules/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules/:path*" },
+    { "source": "/pricing", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing" },
+    { "source": "/pricing/", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing" },
+    { "source": "/pricing/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing/:path*" },
     { "source": "/tickets", "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets" },
     { "source": "/tickets/", "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets" },
     { "source": "/tickets/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets/:path*" },
+    { "source": "/revenue", "destination": "https://kyradi-saas-canli-production.up.railway.app/revenue" },
+    { "source": "/revenue/", "destination": "https://kyradi-saas-canli-production.up.railway.app/revenue" },
+    { "source": "/revenue/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/revenue/:path*" },
     { "source": "/ai", "destination": "https://kyradi-saas-canli-production.up.railway.app/ai" },
     { "source": "/ai/", "destination": "https://kyradi-saas-canli-production.up.railway.app/ai" },
     { "source": "/ai/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/ai/:path*" },
