--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,56 +1,68 @@
 {
   "rewrites": [
-    { "source": "/auth", "destination": "https://kyradi-saas-canli-production.up.railway.app/auth" },
-    { "source": "/auth/", "destination": "https://kyradi-saas-canli-production.up.railway.app/auth" },
-    { "source": "/auth/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/auth/:path*" },
-    { "source": "/api", "destination": "https://kyradi-saas-canli-production.up.railway.app/api" },
-    { "source": "/api/", "destination": "https://kyradi-saas-canli-production.up.railway.app/api" },
-    { "source": "/api/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/api/:path*" },
-    { "source": "/admin", "destination": "https://kyradi-saas-canli-production.up.railway.app/admin" },
-    { "source": "/admin/", "destination": "https://kyradi-saas-canli-production.up.railway.app/admin" },
-    { "source": "/admin/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/admin/:path*" },
-    { "source": "/partners", "destination": "https://kyradi-saas-canli-production.up.railway.app/partners" },
-    { "source": "/partners/", "destination": "https://kyradi-saas-canli-production.up.railway.app/partners" },
-    { "source": "/partners/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/partners/:path*" },
-    { "source": "/users", "destination": "https://kyradi-saas-canli-production.up.railway.app/users" },
-    { "source": "/users/", "destination": "https://kyradi-saas-canli-production.up.railway.app/users" },
-    { "source": "/users/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/users/:path*" },
-    { "source": "/staff", "destination": "https://kyradi-saas-canli-production.up.railway.app/staff" },
-    { "source": "/staff/", "destination": "https://kyradi-saas-canli-production.up.railway.app/staff" },
-    { "source": "/staff/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/staff/:path*" },
-    { "source": "/reports", "destination": "https://kyradi-saas-canli-production.up.railway.app/reports" },
-    { "source": "/reports/", "destination": "https://kyradi-saas-canli-production.up.railway.app/reports" },
-    { "source": "/reports/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/reports/:path*" },
-    { "source": "/payment-schedules", "destination": "https://kyradi-saas-canli-production.up.railway.app/payment-schedules" },
-    { "source": "/payment-schedules/", "destination": "https://kyradi-saas-canli-production.up.railway.app/payment-schedules" },
-    { "source": "/payment-schedules/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/payment-schedules/:path*" },
-    { "source": "/reservations", "destination": "https://kyradi-saas-canli-production.up.railway.app/reservations" },
-    { "source": "/reservations/", "destination": "https://kyradi-saas-canli-production.up.railway.app/reservations" },
-    { "source": "/reservations/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/reservations/:path*" },
-    { "source": "/locations", "destination": "https://kyradi-saas-canli-production.up.railway.app/locations" },
-    { "source": "/locations/", "destination": "https://kyradi-saas-canli-production.up.railway.app/locations" },
-    { "source": "/locations/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/locations/:path*" },
-    { "source": "/storages", "destination": "https://kyradi-saas-canli-production.up.railway.app/storages" },
-    { "source": "/storages/", "destination": "https://kyradi-saas-canli-production.up.railway.app/storages" },
-    { "source": "/storages/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/storages/:path*" },
-    { "source": "/pricing-rules", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules" },
-    { "source": "/pricing-rules/", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules" },
-    { "source": "/pricing-rules/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules/:path*" },
-    { "source": "/pricing", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing" },
-    { "source": "/pricing/", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing" },
-    { "source": "/pricing/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing/:path*" },
-    { "source": "/tickets", "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets" },
-    { "source": "/tickets/", "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets" },
-    { "source": "/tickets/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets/:path*" },
-    { "source": "/revenue", "destination": "https://kyradi-saas-canli-production.up.railway.app/revenue" },
-    { "source": "/revenue/", "destination": "https://kyradi-saas-canli-production.up.railway.app/revenue" },
-    { "source": "/revenue/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/revenue/:path*" },
-    { "source": "/ai", "destination": "https://kyradi-saas-canli-production.up.railway.app/ai" },
-    { "source": "/ai/", "destination": "https://kyradi-saas-canli-production.up.railway.app/ai" },
-    { "source": "/ai/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/ai/:path*" },
-    { "source": "/public", "destination": "https://kyradi-saas-canli-production.up.railway.app/public" },
-    { "source": "/public/", "destination": "https://kyradi-saas-canli-production.up.railway.app/public" },
-    { "source": "/public/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/public/:path*" },
-    { "source": "/:path*", "destination": "/index.html" }
+    {
+      "source": "/auth/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/auth/:path*"
+    },
+    {
+      "source": "/api/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/api/:path*"
+    },
+    {
+      "source": "/admin/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/admin/:path*"
+    },
+    {
+      "source": "/partners/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/partners/:path*"
+    },
+    {
+      "source": "/users/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/users/:path*"
+    },
+    {
+      "source": "/staff/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/staff/:path*"
+    },
+    {
+      "source": "/reports/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/reports/:path*"
+    },
+    {
+      "source": "/payment-schedules/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/payment-schedules/:path*"
+    },
+    {
+      "source": "/reservations/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/reservations/:path*"
+    },
+    {
+      "source": "/locations/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/locations/:path*"
+    },
+    {
+      "source": "/storages/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/storages/:path*"
+    },
+    {
+      "source": "/pricing-rules/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules/:path*"
+    },
+    {
+      "source": "/tickets/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets/:path*"
+    },
+    {
+      "source": "/ai/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/ai/:path*"
+    },
+    {
+      "source": "/public/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/public/:path*"
+    },
+    {
+      "source": "/:path*",
+      "destination": "/index.html"
+    }
   ]
 }
