--- a/vercel.json
+++ b/vercel.json
@@ -1,67 +1,84 @@
 {
   "rewrites": [
-    { "source": "/auth", "destination": "https://kyradi-saas-canli-production.up.railway.app/auth" },
     {
       "source": "/auth/:path*",
       "destination": "https://kyradi-saas-canli-production.up.railway.app/auth/:path*"
     },
-    { "source": "/admin", "destination": "https://kyradi-saas-canli-production.up.railway.app/admin" },
     {
       "source": "/admin/:path*",
+      "has": [
+        { "type": "header", "key": "x-requested-with", "value": "XMLHttpRequest" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/admin/:path*"
     },
-    { "source": "/partners", "destination": "https://kyradi-saas-canli-production.up.railway.app/partners" },
     {
       "source": "/partners/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/partners/:path*"
     },
-    { "source": "/users", "destination": "https://kyradi-saas-canli-production.up.railway.app/users" },
     {
       "source": "/users/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/users/:path*"
     },
-    { "source": "/staff", "destination": "https://kyradi-saas-canli-production.up.railway.app/staff" },
     {
       "source": "/staff/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/staff/:path*"
     },
-    { "source": "/reports", "destination": "https://kyradi-saas-canli-production.up.railway.app/reports" },
     {
       "source": "/reports/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/reports/:path*"
     },
-    { "source": "/payment-schedules", "destination": "https://kyradi-saas-canli-production.up.railway.app/payment-schedules" },
     {
       "source": "/payment-schedules/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/payment-schedules/:path*"
     },
-    { "source": "/reservations", "destination": "https://kyradi-saas-canli-production.up.railway.app/reservations" },
     {
       "source": "/reservations/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/reservations/:path*"
     },
-    { "source": "/locations", "destination": "https://kyradi-saas-canli-production.up.railway.app/locations" },
     {
       "source": "/locations/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/locations/:path*"
     },
-    { "source": "/storages", "destination": "https://kyradi-saas-canli-production.up.railway.app/storages" },
     {
       "source": "/storages/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/storages/:path*"
     },
-    { "source": "/pricing-rules", "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules" },
     {
       "source": "/pricing-rules/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules/:path*"
     },
-    { "source": "/tickets", "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets" },
-    { "source": "/tickets/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets/:path*" },
-    { "source": "/ai", "destination": "https://kyradi-saas-canli-production.up.railway.app/ai" },
-    { "source": "/ai/:path*", "destination": "https://kyradi-saas-canli-production.up.railway.app/ai/:path*" },
-    { "source": "/public", "destination": "https://kyradi-saas-canli-production.up.railway.app/public" },
     {
       "source": "/public/:path*",
+      "has": [
+        { "type": "host", "value": "^[a-z0-9-]+\\.kyradi\\.com$" }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/public/:path*"
     },
     {
