fix(lockers): use /lockers api and add rewrites

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -89,6 +89,14 @@
       "destination": "https://kyradi-saas-canli-production.up.railway.app/storages"
     },
     {
+      "source": "/lockers/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/lockers/:path*"
+    },
+    {
+      "source": "/lockers",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/lockers"
+    },
+    {
       "source": "/pricing-rules/:path*",
       "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules/:path*"
     },
