--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,219 +2,91 @@
   "rewrites": [
     {
       "source": "/auth/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/auth/:path*"
-    },
-    {
-      "source": "/auth",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/auth"
-    },
-    {
-      "source": "/api/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/api/:path*"
-    },
-    {
-      "source": "/api",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/api"
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/:path*"
     },
     {
       "source": "/admin/:path*",
       "destination": "https://kyradi-saas-canli-production.up.railway.app/admin/:path*"
     },
     {
-      "source": "/admin",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/admin"
-    },
-    {
-      "source": "/audit-logs/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/audit-logs/:path*"
-    },
-    {
-      "source": "/audit-logs",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/audit-logs"
-    },
-    {
-      "source": "/health/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/health/:path*"
-    },
-    {
-      "source": "/health",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/health"
-    },
-    {
-      "source": "/qr/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/qr/:path*"
-    },
-    {
-      "source": "/qr",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/qr"
-    },
-    {
-      "source": "/demo/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/demo/:path*"
-    },
-    {
-      "source": "/demo",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/demo"
-    },
-    {
-      "source": "/partners/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/partners/:path*"
-    },
-    {
-      "source": "/partners",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/partners"
-    },
-    {
-      "source": "/partner/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/partner/:path*"
-    },
-    {
-      "source": "/partner",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/partner"
-    },
-    {
-      "source": "/users/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/users/:path*"
-    },
-    {
-      "source": "/users",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/users"
-    },
-    {
-      "source": "/staff/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/staff/:path*"
-    },
-    {
-      "source": "/staff",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/staff"
-    },
-    {
-      "source": "/reports/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/reports/:path*"
-    },
-    {
-      "source": "/reports",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/reports"
-    },
-    {
-      "source": "/payment-schedules/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/payment-schedules/:path*"
-    },
-    {
-      "source": "/payment-schedules",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/payment-schedules"
-    },
-    {
-      "source": "/reservations/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/reservations/:path*"
-    },
-    {
-      "source": "/reservations",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/reservations"
+      "source": "/api/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/api/:path*"
     },
     {
       "source": "/locations/:path*",
       "destination": "https://kyradi-saas-canli-production.up.railway.app/locations/:path*"
     },
     {
-      "source": "/locations",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/locations"
-    },
-    {
       "source": "/storages/:path*",
       "destination": "https://kyradi-saas-canli-production.up.railway.app/storages/:path*"
-    },
-    {
-      "source": "/storages",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/storages"
     },
     {
       "source": "/lockers/:path*",
       "destination": "https://kyradi-saas-canli-production.up.railway.app/lockers/:path*"
     },
     {
-      "source": "/lockers",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/lockers"
-    },
-    {
-      "source": "/pricing-rules",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules"
-    },
-    {
-      "source": "/pricing-rules/",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules/"
+      "source": "/reservations/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/reservations/:path*"
     },
     {
       "source": "/pricing-rules/:path*",
       "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing-rules/:path*"
     },
     {
-      "source": "/pricing",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing"
+      "source": "/payment-schedules/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/payment-schedules/:path*"
     },
     {
-      "source": "/pricing/",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing/"
-    },
-    {
-      "source": "/pricing/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/pricing/:path*"
-    },
-    {
-      "source": "/tickets/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets/:path*"
-    },
-    {
-      "source": "/tickets",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets"
-    },
-    {
-      "source": "/payments/magicpay/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/payments/magicpay/:path*"
-    },
-    {
-      "source": "/payments/magicpay",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/payments/magicpay"
-    },
-    {
-      "source": "/payments/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/payments/:path*"
-    },
-    {
-      "source": "/payments",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/payments"
+      "source": "/reports/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/reports/:path*"
     },
     {
       "source": "/revenue/:path*",
       "destination": "https://kyradi-saas-canli-production.up.railway.app/revenue/:path*"
     },
     {
-      "source": "/revenue",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/revenue"
+      "source": "/staff/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/staff/:path*"
     },
     {
-      "source": "/ai/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/ai/:path*"
+      "source": "/users/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/users/:path*"
     },
     {
-      "source": "/ai",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/ai"
+      "source": "/tickets/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/tickets/:path*"
+    },
+    {
+      "source": "/partners/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/partners/:path*"
     },
     {
       "source": "/public/:path*",
       "destination": "https://kyradi-saas-canli-production.up.railway.app/public/:path*"
     },
     {
-      "source": "/public",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/public"
+      "source": "/payments/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/payments/:path*"
     },
     {
-      "source": "/webhooks/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/webhooks/:path*"
+      "source": "/magicpay/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/magicpay/:path*"
     },
     {
-      "source": "/webhooks",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/webhooks"
+      "source": "/qr/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/qr/:path*"
+    },
+    {
+      "source": "/domain-check/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/domain-check/:path*"
+    },
+    {
+      "source": "/health",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/health"
+    },
+    {
+      "source": "/ai/:path*",
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/ai/:path*"
     },
     {
       "source": "/:path*",
