fix(auth): correct /auth rewrite and stabilize login bootstrap

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/auth/:path*",
-      "destination": "https://kyradi-saas-canli-production.up.railway.app/:path*"
+      "destination": "https://kyradi-saas-canli-production.up.railway.app/auth/:path*"
     },
     {
       "source": "/admin/:path*",
