fix(vercel): keep admin SPA routes from being proxied as API

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -10,10 +10,24 @@
     },
     {
       "source": "/admin",
+      "has": [
+        {
+          "type": "header",
+          "key": "x-requested-with",
+          "value": "XMLHttpRequest"
+        }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/admin"
     },
     {
       "source": "/admin/:path*",
+      "has": [
+        {
+          "type": "header",
+          "key": "x-requested-with",
+          "value": "XMLHttpRequest"
+        }
+      ],
       "destination": "https://kyradi-saas-canli-production.up.railway.app/admin/:path*"
     },
     {
